# isw2

./: .gitignore
informe/tex/: anexodiagramas.tex  burndown.tex  diseno.tex  implementacion.tex  informe.tex  lultex.sh  productbacklog.tex  retrospectiva.tex  seguimiento.tex  sprintbacklog.tex  sprintbacklog2.tex  test.tex
informe/tex/img/: .~lock.graficosSprint.ods#  burndownChart.ods  graficosSprint.ods
src/: .gitignore  CMakeLists.txt  Makefile  action_log_item.cpp  action_log_item.h  actuator.h  actuators_handler.h  antibiotic_actuator.h  basic_datatypes.h  client.cpp  decision.cpp  decision.h  decisions.cpp  decisions.h  decisions_maker.cpp  decisions_maker.h  default_plan  external_anomalies_listener.h  external_conditions.cpp  external_conditions_log_item.cpp  external_conditions_log_item.h  gui.cpp  gui.h  history.cpp  history.h  level.cpp  level.h  log_item.h  master_plan.cpp  master_plan.h  messages.cpp  messages.h  plant.cpp  plant.h  plant_log_item.cpp  plant_log_item.h  server.cpp  server.h  stage.cpp  stage.h  (+7 more)
src/actuators/: actuator.h  actuators_handler.cpp  actuators_handler.h  antibiotic_actuator.cpp  antibiotic_actuator.h  fertilizer_actuator.cpp  fertilizer_actuator.h  light_actuator.cpp  light_actuator.h  quantity.cpp  quantity.h  water_actuator.cpp  water_actuator.h
src/arduino/: arduino.cpp  arduino.h  fakeArduino.cpp  port.h
src/sensors/: external_anomalies_listener.h  external_conditions.cpp  external_conditions.h  external_conditions_reader.cpp  external_conditions_reader.h  external_data.cpp  external_data.h  humidity_sensor.cpp  humidity_sensor.h  ph_sensor.cpp  ph_sensor.h  sensor.h  sensors_reading.cpp  sensors_reading.h  temperature_sensor.cpp  temperature_sensor.h  weather_report.cpp  weather_report.h  weather_station.cpp  weather_station.h
